# Physx2D-SandBox

./: .gitignore  CMakeLists.txt  License.txt  README.md  build.sh  setup.sh
res/c_shaders/: b_reaction.glsl  gameoflife.glsl  mnca.glsl  ray_trace.glsl  reaction.glsl  wolfram.glsl
res/images/neighborhoods/bacteria/: rules.txt
res/images/neighborhoods/mitosis/: rules.txt
res/shaders/: circle.glsl  f_frag.glsl  f_vert.glsl  quad.glsl  vert.glsl
src/: main.cpp
src/applications/: MNCA.h  PhysicsTestApp.h  WaveFuncCollapseApp.h  boid_sim.h  cellularAutomata.h
src/boids/: boid.cpp  boid.h
src/cellular_automata/: CA_gpu.cpp  CA_gpu.h  mnca.cpp  mnca.h
src/compute_shader_test/: ray_tracing.cpp  ray_tracing.h
src/wavefcollapse/: WFC.cpp  WFC.h
